--- a/src/app/common/components/header/header.component.html
+++ b/src/app/common/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light menu fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">
-      <!--<img src="../../../../assets/icons/favicon.png" alt="Logo" width="64" height="64"
+    <a  class="navbar-brand" >
+      <!--<img src="../../../../assets/svg/chevron-left-solid.svg" alt="Logo" width="32" height="32"
            class="d-inline-block align-text-top">-->
     </a>
 
