--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -3,21 +3,21 @@
     <div class="row align-items-center d-flex justify-content-center">
       <!-- Search bar -->
       <div class="form-outline rounded-5 w-50 p-3 ">
-          <input type="search" id="form1" class="form-control" placeholder="Search..." aria-label="Search"/>
+          <input [(ngModel)]="target"  type="search" id="form1" class="form-control" placeholder="Search..." aria-label="Search"/>
       </div>
 
       <div class="row mt-5 mb-4 g-3 text-center">
         <div class="col-md-12">
-          <button class="btn btn-outline-primary text-secondary" type="button">
+          <button (click)="setTargetValue('v4')" class="btn btn-outline-primary text-secondary" type="button" >
             {{'ip v4'|uppercase}}
           </button>
-          <button class="btn btn-outline-primary text-secondary" type="button">
+          <button (click)="setTargetValue('v6')" class="btn btn-outline-primary text-secondary" type="button">
             {{'ip v6'|uppercase}}
           </button>
-          <button class="btn btn-outline-primary text-secondary" type="button">
+          <button (click)="setTargetValue('hostname')" class="btn btn-outline-primary text-secondary" type="button">
             {{'hostname'|uppercase}}
           </button>
-          <button class="btn btn-outline-primary text-secondary" type="button">
+          <button (click)="setTargetValue('uri')" class="btn btn-outline-primary text-secondary" type="button">
             {{'uri'|uppercase}}
           </button>
         </div>
@@ -37,7 +37,7 @@
   <div class="container">
     <div class="row align-self-center">
       <div class="col d-flex justify-content-center ">
-        <button type="button" class="btn btn-success btn-lg">{{'start scanning'| titlecase}}</button>
+        <button type="button" class="btn btn-success btn-lg" (click)="start()">{{'start scanning'| titlecase}}</button>
       </div>
     </div>
   </div>
