feat: adding logics with low style

--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -8,16 +8,16 @@
 
       <div class="row mt-5 mb-4 g-3 text-center">
         <div class="col-md-12">
-          <button (click)="setTargetValue('v4')" class="btn btn-outline-primary text-secondary" type="button" >
+          <button (click)="setTargetValue('v4')" class="btn btn-outline-info text-secondary" type="button" >
             {{'ip v4'|uppercase}}
           </button>
-          <button (click)="setTargetValue('v6')" class="btn btn-outline-primary text-secondary" type="button">
+          <button (click)="setTargetValue('v6')" class="btn btn-outline-info text-secondary" type="button">
             {{'ip v6'|uppercase}}
           </button>
-          <button (click)="setTargetValue('hostname')" class="btn btn-outline-primary text-secondary" type="button">
+          <button (click)="setTargetValue('hostname')" class="btn btn-outline-info text-secondary" type="button">
             {{'hostname'|uppercase}}
           </button>
-          <button (click)="setTargetValue('uri')" class="btn btn-outline-primary text-secondary" type="button">
+          <button (click)="setTargetValue('uri')" class="btn btn-outline-info text-secondary" type="button">
             {{'uri'|uppercase}}
           </button>
         </div>
