--- a/src/app/home/loading/loading.component.html
+++ b/src/app/home/loading/loading.component.html
@@ -1,1 +1,30 @@
-<p>loading works!</p>
+<section id="head" class="head-section">
+  <div class="container">
+    <div class="row align-items-center d-flex justify-content-center">
+      <!-- Search bar -->
+      <h1 class="display-2 text-center mt-5 mb-4 g-3">
+        <span class="row text-secondary display-2--intro"> Scanning </span>
+        <span class="row text-black display-2--description"> {{target}} </span>
+      </h1>
+
+    </div>
+  </div>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 200">
+    <path
+      fill="#FFFFFF"
+      fill-opacity="1"
+      d="M0,160L48,149.3C96,139,192,117,288,101.3C384,85,480,75,576,101.3C672,128,768,192,864,186.7C960,181,1056,107,1152,85.3C1248,64,1344,96,1392,112L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+    ></path>
+  </svg>
+</section>
+<section id="loader">
+  <div class="container">
+    <div class="row align-self-center">
+      <div class="col d-flex justify-content-center ">
+        <img src="../../../assets/svg/spinner-solid.svg" alt="Spinner" width="150" height="150"/>
+      </div>
+    </div>
+  </div>
+</section>
+
+
