--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -12,7 +12,7 @@
     font-weight: 700;
     text-transform: capitalize;
     margin-right: 0.5rem;
-    border: 0.1rem solid $primary;
+    border: 0.1rem solid $secondary;
   }
 
 }
