--- a/src/app/home/content/content.component.html
+++ b/src/app/home/content/content.component.html
@@ -1,1 +1,12 @@
-<p>{{result}}</p>
+<div class="container">
+  <div class="row align-items-center d-flex justify-content-center mt-5 mb-3">
+    <h1 class="display-2 text-secondary"> Scan Report</h1>
+  </div>
+  <div class="row">
+    <p class="display-5">{{result}}</p>
+  </div>
+  <div class="float-start">
+    <img src="assets/svg/chevron-left-solid.svg" alt="Back Home" width="32" height="32">
+    <p routerLink="/home" class="display-6"> Home </p>
+  </div>
+</div>
